Change design and text of SwitchJudge index.html

--- a/samples/SwitchJudge/index.html
+++ b/samples/SwitchJudge/index.html
@@ -22,21 +22,23 @@
       <input type="button" class="json" value="Save" name="">
       <input type="button" class="load_json" value="Load" name="">
     </div>
-    <div>
-	    <input type="button" class="on" value="On" name=""><img class="onimg" src="image/on.png">
+    <div  style="text-align: center; margin: 10px 0">
+            <input type="button" class="on" value="On" name=""><img class="onimg" src="image/on.png">
       <input type="button" class="off" value="Off" name=""><img class="offimg" src="image/off.png">
       <input type="button" class="judge" value="Judge" name="">
     </div>
-    <div>
+    <div style="margin-left: 320px">
       <h3>使い方</h3>
       <p>
-        このWEBアプリはスイッチのON/OFF状態を画像であらかじめ記録し、今どちらの状態にあるのか判定するプログラムです<br>
-        １Rectを選択<br>
-        ２表示された「rect0」をスイッチの位置に合わせサイズを調整する<br>
-        ３「Save」をおして、エリアを確定させる<br>
-        ４スイッチをONにして「On」ボタンを押す<br>
-        ５スイッチをOFFにして「Off」ボタンを押す<br>
-        ６スイッチをどちらかにして「Judge」ボタンを押してスイッチの状態が一致しているか確認する<br>
+        このWEBアプリはスイッチのON/OFF状態を画像であらかじめ記録し、今どちらの状態にあるのか判定するプログラムです
+        <ol>
+          <li>Rectを選択</li>
+          <li>表示された「rect0」をスイッチの位置に合わせサイズを調整する</li>
+          <li>「Save」をおして、エリアを確定させる</li>
+          <li>スイッチをONにして「On」ボタンを押す</li>
+          <li>スイッチをOFFにして「Off」ボタンを押す</li>
+          <li>スイッチをどちらかにして「Judge」ボタンを押してスイッチの状態が一致しているか確認する</li>
+        </ol>
       </p>
     </div>
     
