Add GPIO samples

--- a/samples/index.html
+++ b/samples/index.html
@@ -41,6 +41,15 @@
                 <p><a href="Factory/factory_demo.py">Factory Demo</a></p>
             </td>
         </tr>
+        <tr>
+            <td>
+                <p><a href="GPIO">GPIO</a></p>
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+        </tr>
         </table>
     </div>
 
