Add sample for Zbar

--- a/samples/index.html
+++ b/samples/index.html
@@ -46,6 +46,7 @@
                 <p><a href="GPIO">GPIO</a></p>
             </td>
             <td>
+                <p><a href="Zbar/zbar.py">Zbar</a></p>
             </td>
             <td>
             </td>
