--- a/samples/SwitchJudge/index.html
+++ b/samples/SwitchJudge/index.html
@@ -2,8 +2,8 @@
  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=800px">
-    <script src="./scripts/jquery-2.2.4.min.js"></script>
-    <script src="./scripts/fabric.min.js"></script>
+    <script src="/samples/scripts/jquery-2.2.4.min.js"></script>
+    <script src="/samples/scripts/fabric.min.js"></script>
     <script src="./scripts/common.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="./scripts/common.css" />
  </head>
