--- a/samples/index.html
+++ b/samples/index.html
@@ -35,20 +35,21 @@
                 <p><a href="SwitchJudge">SwitchJudge</a></p>
             </td>
             <td>
-                <p><a href="CupHolder/cupholder_demo.py">CupHolder Demo</a></p>
+                <p><a href="Tesseract">Tesseract(OCR)</a></p>
             </td>
             <td>
-                <p><a href="Factory/factory_demo.py">Factory Demo</a></p>
+                <p><a href="CupHolder/cupholder_demo.py">CupHolder Demo</a></p>
             </td>
         </tr>
         <tr>
+            <td>
+                <p><a href="Factory/factory_demo.py">Factory Demo</a></p>
+            </td>
             <td>
                 <p><a href="GPIO">GPIO</a></p>
             </td>
             <td>
                 <p><a href="Zbar/zbar.py">Zbar</a></p>
-            </td>
-            <td>
             </td>
         </tr>
         </table>
