Add files for Raspi-Magazine sample

--- a/samples/index.html
+++ b/samples/index.html
@@ -52,6 +52,15 @@
                 <p><a href="Zbar/zbar.py">Zbar</a></p>
             </td>
         </tr>
+        <tr>
+            <td>
+                <p><a href="Raspi-Magazine/">Raspi Magazine</a></p>
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+        </tr>
         </table>
     </div>
 
