Add files for thermo camera

--- a/samples/index.html
+++ b/samples/index.html
@@ -57,6 +57,7 @@
                 <p><a href="Raspi-Magazine/">Raspi Magazine</a></p>
             </td>
             <td>
+                <p><a href="thermo_web/">Thermo</a></p>
             </td>
             <td>
             </td>
