Add files for AR Marker reading sample program

--- a/samples/index.html
+++ b/samples/index.html
@@ -60,6 +60,7 @@
                 <p><a href="thermo_web/">Thermo</a></p>
             </td>
             <td>
+                <p><a href="Aruco/">AR Marker</a></p>
             </td>
         </tr>
         </table>
