Add files for hvc-p2 SDK version

--- a/samples/index.html
+++ b/samples/index.html
@@ -60,7 +60,16 @@
                 <p><a href="thermo_web/">Thermo</a></p>
             </td>
             <td>
+                <p><a href="hvcp2_web/">HVC-P2</a></p>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <p><a href="Aruco/">AR Marker</a></p>
+            </td>
+            <td>
+            </td>
+            <td>
             </td>
         </tr>
         </table>
