change GPIO html

--- a/samples/GPIO/index.html
+++ b/samples/GPIO/index.html
@@ -1,13 +1,69 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>SCORER GPIO ACCESS Sample</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>SCORER GPIO ACCESS Sample</title>
+    <style type="text/css">
+        body{margin:0; padding:0; font:100% Verdana,Arial,Helvetica,sans-serif; font-size:14px;}
+        .clock p {border:none; text-align:right; font-size:70%; color:#404040; mergine:0px 10px;}
+        .gallery {border:1px #ccc solid; margin:40px auto; text-align:center; clear:both;}
+
+        .gallery table {margin:10px; border-collapse: collapse; border-spacing:0px; border-top:1px solid #ccc; border:1px solid #ccc; display:inline-block;}
+        .gallery table th {padding:4px; color:#444; background-color:#ccc;}
+        .gallery table td {padding:4px; background-color:#fafafa; border-right:1px solid #ccc; width: 200px; height: 120px; vertical-align: top;}
+        .gallery p {color:#004694;}
+
+    </style>
 </head>
 <body>
-
-These python codes are the samples for SCORER Python SDK <br>
-<br>
-<a href="./GPIO.py">GPIO.py</a> <br>
-<a href="./PWM.py">PWM.py</a> <br>
-
+    <div class="gallery">
+        <p>SCORER GPIO ACCESS Sample</p>
+        <table style="border-style: hidden;">
+        <tr>
+            <td>
+                <p><a href="./GPIO.py">GPIO Sample Code</a></p>
+            </td>
+            <td>
+                <p><a href="./PWM.py">PWM Sample Code</a></p>
+            </td>
+            <td>
+                <p><a href="./Actuator/Motor/DRV8830">Motor : DRV8830</a></p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p><a href="./Actuator/Motor/DRV8833">Motor : DRV8833</a></p>
+            </td>
+            <td>
+                <p><a href="./Actuator/Motor/DRV8835">Motor : DRV8835</a></p>
+            </td>
+            <td>
+                <p><a href="./Actuator/Servo/PCA9685">Servo : PCA9685</a></p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p><a href="./Sensor/BME280/examples/sample.py">Sensor : BME280 Sample Code</a></p>
+            </td>
+            <td>
+                <p><a href="./Sensor/DE_LIDAR">Sensor : DE_LIDAR</a></p>
+            </td>
+            <td>
+                <p><a href="./Sensor/HR168">Sensor : HR168</a></p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p><a href="./Sensor/SDS011">Sensor : SDS011</a></p>
+            </td>
+            <td>
+                <p><a href="./Sensor/VL53L0X">Sensor : VL53L0X</a></p>
+            </td>
+            <td>
+                <p><a href="./Sensor/VL53L1X">Sensor : VL53L1X</a></p>
+            </td>
+        </tr>
+        </table>
+    </div>
 </body>
 </html>
