--- a/samples/GPIO/index.html
+++ b/samples/GPIO/index.html
@@ -68,7 +68,7 @@
                 <p><a href="./Sensor/VL53L1X_USB">Sensor : VL53L1X_USB</a></p>
             </td>
             <td>
-                <p>&nbsp;</p>
+                <p><a href="./Sensor/GY-VL53L1X">Sensor : GY-VL53L1X</a></p>
             </td>
             <td>
                 <p>&nbsp;</p>
