--- a/samples/GPIO/Sensor/GY-VL53L1X/index.html
+++ b/samples/GPIO/Sensor/GY-VL53L1X/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="index.css" type="text/css" />
 </head>
 <body>
-<h1>VL53L1X USB SAMPLE</h1>
+<h1>GY-VL53L1X SAMPLE</h1>
 <div id="distance">---- mm</div>
 <div class="container">
     <div id="circle"></div>
