Add files for the face detection, face tracking and face index.

--- a/samples/index.html
+++ b/samples/index.html
@@ -68,14 +68,24 @@
                 <p><a href="Aruco/">AR Marker</a></p>
             </td>
             <td>
+                <p><a href="Face_track/">Face_track</a></p>
+            </td>
+            <td>
+                <p><a href="Face_info_aws/">Face_info_aws</a></p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p><a href="Face_info_azure/">Face_info_azure</a></p>
+            </td>
+            <td>
+                <p><a href="Face_stay/">Face_stay</a></p>
             </td>
             <td>
             </td>
         </tr>
         </table>
     </div>
-
-
 
 </body>
 </html>
