Fix typo in html file

--- a/samples/Face_info_azure/index.html
+++ b/samples/Face_info_azure/index.html
@@ -9,8 +9,8 @@ These python codes are the getting face information using AZURE face api<br>
 <a href="./face_detector.py">face_detector.py</a> <br>
 <a href="./object_tracker.py">object_tracker.py</a> <br>
 <a href="./tracked_object.py">tracked_object.py</a> <br>
-<a href="./face_info_aws.py">face_info_azure.py</a> <br>
-<a href="./info_aws.py">info_azure.py</a> <br>
+<a href="./face_info_azure.py">face_info_azure.py</a> <br>
+<a href="./info_azure.py">info_azure.py</a> <br>
 
 </body>
 </html>
