Added to new version 1.1 to Face_stay.

--- a/samples/Face_stay/index.html
+++ b/samples/Face_stay/index.html
@@ -3,15 +3,9 @@
 <title>SCORER face_stay</title>
 </head>
 <body>
-
-These python codes are the getting stay time using AWS rekognition<br>
-<br>
-<a href="./face_detector.py">face_detector.py</a> <br>
-<a href="./object_tracker.py">object_tracker.py</a> <br>
-<a href="./tracked_object.py">tracked_object.py</a> <br>
-<a href="./face_indexer.py">face_indexer.py</a> <br>
-<a href="./enter.py">enter.py</a> <br>
-<a href="./out.py">out.py</a> <br>
+The latest version is ver1.1.<br>
+<a href="./ver1.0">ver1.0</a> <br>
+<a href="./ver1.1">ver1.1</a> <br>
 
 </body>
 </html>
