Add Face_stay ver1.3

--- a/samples/Face_stay/index.html
+++ b/samples/Face_stay/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
-<title>SCORER face_stay</title>
+<title>SCORER Face_stay</title>
 </head>
 <body>
-The latest version is ver1.1.<br>
+The latest version is ver1.3.<br>
 <a href="./ver1.0">ver1.0</a> <br>
 <a href="./ver1.1">ver1.1</a> <br>
+<a href="./ver1.2">ver1.2</a> <br>
+<a href="./ver1.3">ver1.3</a> <br>
 
 </body>
 </html>
